feature:  Apply WebSocket to comments api
